--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
+    <title>
+        Портфолио
+    </title>
+    <link href="style.css" rel="stylesheet" type="text/css">
     <body>
         <header>
             <nav>
                 <img class="beluga" src="https://i.pinimg.com/736x/52/7a/10/527a10bfea214f1c9ee02726a3833a75.jpg">
         <a href="">Обо мне</a>
         <a href="">Контакты</a>
-        <a href="">Портфоло</a>
+        <a href="">Портфолио</a>
         </nav>
         </header>
         <main>
