--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <nav>
-                <img class="beluga" src="https://i.pinimg.com/736x/52/7a/10/527a10bfea214f1c9ee02726a3833a75.jpg">
+                <img class="beluga" src="527a10bfea214f1c9ee02726a3833a75.jpg">
         <a href="">Обо мне</a>
         <a href="">Контакты</a>
         <a href="">Портфолио</a>
