--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <title>
-        Портфолио
+        Портфолио супер гения мира
     </title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <body>
